Fix tablet alignment issues for event logs
This will make sure our event log content is properly aligned
on tablet and desktop views. It will also make the date/time value
on the server overview page always display underneath the 'BMC time'
label in a destkop view–currently the date value will wrap to a
new line if the string is too long.

- Update markup to use Foundation grid layout classes on the
  server overview event log table

Tested: Event log tables on server overview page and event
        log page

--- a/app/overview/styles/system-overview.scss
+++ b/app/overview/styles/system-overview.scss
@@ -25,7 +25,10 @@
 }
 .overview__event-log {
   padding-top: 2em;
-  .event__description {color: $black; text-decoration: none;}
+  .event__description {
+    color: $black;
+    text-decoration: none;
+  }
   .control-check {display: none;}
   .accord-trigger {
     transform: rotate(0deg) translateY(-50%);
@@ -34,11 +37,7 @@
     right: 0;
   }
   .event-log__event-info {
-    width: 90%;
     padding-left: 1.4em;
-  }
-  .event-log__single-event .event__description {
-    margin-left: 2.3em;
   }
 }
 
